<?xml version="1.0"?>
<package format="2">
  <name>unitree_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>Unitree Plugins for Gazebo</description>

  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
